frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react
  labels:
    app: react
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 3000
      name: http
  selector:
    app: react
