spring-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: pavanvere/spring:0.0.6
          ports:
            - containerPort: 8080
          #command:
          #  - sleep
          #  - "1000000"
---
apiVersion: v1
kind: Service
metadata:
  name: spring
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort:
  selector:
    component: spring
