spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  type: NodePort
  selector:
    component: backend
  ports:
    - port: 8080
      targetPort: 30036
      protocol: TCP
