ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: react
                port:
                  number: 3000
