spring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix # <-- IMPORTANT
            backend:
              service:
                name: spring
                port:
                  number: 8080
